# Custom-Extractor-project

./: README.md  pyproject.toml  requirements.txt
customs_data_extractor/: api_client.py  cli.py  utils.py
examples/: run.py
